[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.5.0",
    "aiolimiter>=1.2.1",
    "alembic>=1.18.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sentry-sdk[fastapi]>=2.49.0",
    "sqladmin>=0.22.0",
    "sqlalchemy>=2.0.45",
    "taskiq>=0.12.1",
    "taskiq-fastapi>=0.4.0",
    "taskiq-redis>=1.2.1",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]
